--- a/wercker.yml
+++ b/wercker.yml
@@ -9,7 +9,11 @@ build:
         - script:
             name: Make distributables
             code: |
-                make release
+                make
+        - tcnksm/zip:
+            input: dist
+            output: $WERCKER_OUTPUT_DIR/dist
+# Manual deployment
 deploy:
     steps:
         - tcnksm/ghr:
